--- a/week_10/css/vis_styles.css
+++ b/week_10/css/vis_styles.css
@@ -1,8 +1,46 @@
-#h1{
-  text-align: center;            
-  font-size: 3em;                
-  color: #333;                   
-  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+h1 {
+  text-align: center;                 
+  font-size: 3em;                     
+  color: #333;                        
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);  
   font-family: 'Open Sans', sans-serif; 
-  margin-bottom: 20px; 
+  margin-bottom: 20px;                
+}
+
+h2 {
+  text-align: left;                   
+  font-size: 2em;                     
+  color: #555;                        
+  margin-bottom: 10px;                
+  font-family: 'Open Sans', sans-serif; 
+}
+
+.pure-g {
+  display: flex;                      
+  justify-content: space-between;     
+  flex-wrap: wrap;                    
+}
+
+.pure-u-1-2 {
+  width: 48%;                         
+  margin-bottom: 20px;                
+}
+
+.description-left p {
+  font-size: 1.1em;                   
+  color: #666;                        
+  line-height: 1.6;                  
+  font-family: 'Open Sans', sans-serif; 
+}
+.vis-container {
+  width: 100%;                        
+  max-width: 100%;                    
+  margin: 0 auto;                    
+}
+
+.small-font {
+  font-size: 0.8em;                   
+  color: #999;                        
+  text-align: center;                
+  margin-top: 20px;                   
 }
