--- a/week_10/css/vis_styles.css
+++ b/week_10/css/vis_styles.css
@@ -1,5 +1,5 @@
 h1 {
-  align: center;                 
+  text-align: center;                 
   font-size: 3em;                     
   color: #333;                        
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);  
