--- a/week_10/css/vis_styles.css
+++ b/week_10/css/vis_styles.css
@@ -1,10 +1,9 @@
 h1 {
-  text-align: center;                 
-  font-size: 3em;                     
-  color: #333;                        
-  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);  
-  font-family: 'Open Sans', sans-serif; 
-  margin-bottom: 20px;                
+  text-align: center;
+  font-size: 2.5rem; 
+  color: #333; 
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3); 
+  margin: 20px 0;              
 }
 
 h2 {
