--- a/week_10/css/vis_styles.css
+++ b/week_10/css/vis_styles.css
@@ -6,7 +6,8 @@ h1 {
   font-size: 2.5rem; 
   color: #333; 
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3); 
-  margin: 20px 0;              
+  margin: 20px 0; 
+  text-align: center;
 }
 
 h2 {
