--- a/final/css/styles.css
+++ b/final/css/styles.css
@@ -27,7 +27,8 @@ h1 {
   background-color: #ffffff;
   padding: 10px;
   border-radius: 10px; 
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1)
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  font-family:sans-serif;
 }
 h2 {
   text-align: left;                   
