--- a/final/css/styles.css
+++ b/final/css/styles.css
@@ -25,7 +25,7 @@ h1 {
 
 .content{
   background-color: #ffffff;
-  padding: 10px;
+  padding: 20px;
   border-radius: 10px; 
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   font-family:sans-serif;
@@ -41,14 +41,17 @@ h2 {
 .pure-g {
   display: flex;                       
   justify-content: space-between;     
-  flex-wrap: wrap;                    
+  flex-wrap: wrap;    
 }
 
 .pure-u-1-2 {
   width: 50%;                         
-  box-sizing: border-box;             
-  padding: 10px;                       
-  margin: 0;                           /
+  box-sizing: border-box;                               
+  margin: 0;                           
+}
+
+#vis3{
+  align-items: center;
 }
 
 .description-left p {
