--- a/final/css/styles.css
+++ b/final/css/styles.css
@@ -56,6 +56,12 @@ h2 {
   align-items: center;
 }
 
+#vis6{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .description-left p {
   font-size: 1.1em;                   
   color: #666;                        
