--- a/final/css/styles.css
+++ b/final/css/styles.css
@@ -45,9 +45,9 @@ h2 {
 }
 
 .pure-u-1-2 {
-  width: 50%;                         
+  width: 48%;                         
   box-sizing: border-box;                               
-  margin: 0;                           
+  margin: 10px;                           
 }
 
 #vis3{
@@ -72,7 +72,7 @@ h2 {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  margin-right:100px;
+  margin-right:500px;
 }
 
 #vis7{
