--- a/final/css/styles.css
+++ b/final/css/styles.css
@@ -43,6 +43,12 @@ h2 {
   justify-content: space-between;     
   flex-wrap: wrap;    
 }
+.pure-h {
+  display: flex;                       
+  justify-content: space-between; 
+  align-items:flex-start;
+  flex-wrap: wrap;    
+}
 
 .pure-u-1-2 {
   width: 48%;                         
@@ -70,9 +76,9 @@ h2 {
 
 #vis6{
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
+  margin-left:100px;
   align-items: center;
-  margin-right:500px;
 }
 
 #vis7{
